--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/todomvc-app-css/index.css"
             ],
             "scripts": []
           },
@@ -119,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "todoapp"
+    }
+  },
+  "defaultProject": "todoapp",
+  "cli": {
+    "analytics": "8e23779a-e67f-44e5-9b2a-e93283b0bd78"
+  }
 }
